--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>News Channel</title>
 </head>
+<frameset rows="20%, 60%, 20%">
+    <frame name="breaking" src="breaking.html">
+</frameset>
 <body>
     
 </body>
