--- a/breaking.html
+++ b/breaking.html
@@ -7,6 +7,6 @@
     <title>breaking news</title>
 </head>
 <body>
-    <marquee behavior="" direction="right" height="70px" style="background-color:royalblue; font-size: xx-large; color: azure;"></marquee>
+    <marquee behavior="" direction="right" height="70px" style="background-color:royalblue; font-size: xx-large; color: azure;">BREAKING NEWS!</marquee>
 </body>
 </html>
