--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <frameset rows="20%, 60%, 20%">
     <frame name="breaking" src="breaking.html">
+        <frameset cols="30%, 70%">
+            <frame>
+        </frameset>
 </frameset>
 <body>
     
