--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
     <title>News Channel</title>
 </head>
 <frameset rows="20%, 60%, 20%">
-    <frame name="breaking" src="breaking.html">
+    <frameset cols="10%, 90%">
+        <frame name="news" src="news.jpg">
+        <frame name="br news" src="breaking.html">    
+    </frameset>
         <frameset cols="30%, 70%">
-            <frame>
+            <frame name="article" src="article.html">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/QmERLqjlHdo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </frameset>
+        <frame name="br news" src="breaking.html">
 </frameset>
 <body>
     
