--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <frameset rows="20%, 60%, 20%">
     <frameset cols="10%, 90%">
-        <frame name="news" src="news.jpg">
+        <frame name="news" src="news.jpg" height="80" width="80">
         <frame name="br news" src="breaking.html">    
     </frameset>
         <frameset cols="30%, 70%">
