--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
         <frame name="news" src="news.jpg" height="80" width="80">   
     </frameset>
         <frameset cols="30%, 70%">
-            <frame name="article" src="article.html">
-            <b        
-             <iframe width="560" height="315" src="https://www.youtube.com/embed/QmERLqjlHdo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <frame name="article" src="article.html">       
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/QmERLqjlHdo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </frameset>
         <frame name="br news" src="breaking.html">
+    <noframes>
+        <body>
+            browser does not spport frames
+        </body>
+    </noframes>
 </frameset>
-<body>
-    
-</body>
 </html>
