--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <frameset rows="20%, 60%, 20%">
     <frameset cols="90%, 10%">
         <frame name="br news" src="breaking.html"> 
-        <frame name="news" src="news.jpg" height="80" width="80">   
+        <frame name="news" src="news.jpg" height="80px" width="80px">   
     </frameset>
         <frameset cols="30%, 70%">
             <frame name="article" src="article.html">       
