--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </frameset>
         <frameset cols="30%, 70%">
             <frame name="article" src="article.html">       
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/QmERLqjlHdo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <frame name="video" src="iframe.html">
         </frameset>
         <frame name="br news" src="breaking.html">
     <noframes>
